# chip-8-emulator

./: Cargo.toml  Documents.lnk  README.md  build.rs
src/: debug_ui.rs  debugui.rs  er  main.rs
src/chip8/: cpu.rs  display.rs  keypad.rs  memory.rs  mod.rs
